--- a/pgm1.html
+++ b/pgm1.html
@@ -53,19 +53,19 @@ The College of Engineering Chengannur (CEC), was established by the Government o
 </tr>
 </table>
 <marquee><h2 style="background-color:red;color:white">Contact us:+91-479- 2455125 (Reception)
-+91-479-2454125 (Office)
-+91-479-2451424 (Administrative officer)
++91-479-2454125 (Office),
++91-479-2451424 (Administrative officer),
 +91-479-2456046 (Principal)</h2></marquee>
-<h3 style="color:blue">Address for communication:College of Engineering Chengannur
-Chengannur P.O.
-Alapuzha District
-Kerala
-PIN 689121</h3>
-<h4>Address of the college:College of Engineering Chengannur,
-Chengannur P.O,
-Alapuzha District,
-Kerala,
-PIN 689121</h4>
+<h3 style="color:blue">Address for communication:</h3><p>College of Engineering Chengannur</p>
+<p>Chengannur P.O.</p>
+<p>Alapuzha District</p>
+<p>Kerala</p>
+<p>PIN 689121</p>
+<h4>Address of the college:</h4><p>College of Engineering Chengannur,</p>
+<p>Chengannur P.O</P>
+<P>Alapuzha District,
+Kerala,</P>
+<P>PIN 689121</p>
 <p><a href="https://www.ceconline.edu/">Check more:</a>
 </body>
 </html>
