--- a/pgm1.html
+++ b/pgm1.html
@@ -61,10 +61,11 @@ The College of Engineering Chengannur (CEC), was established by the Government o
 <p>Alapuzha District</p>
 <p>Kerala</p>
 <p>PIN 689121</p>
-<h4>Address of the college:</h4><p>College of Engineering Chengannur,</p>
+<h4 style="color:magenta">Address of the college:</h4>
+<p>College of Engineering Chengannur</p>
 <p>Chengannur P.O</P>
 <P>Alapuzha District,
-Kerala,</P>
+Kerala</P>
 <P>PIN 689121</p>
 <p><a href="https://www.ceconline.edu/">Check more:</a>
 </body>
