--- a/pgm1.html
+++ b/pgm1.html
@@ -7,7 +7,7 @@
 <center>
 <h1 style="color:blue">COLLEGE OF ENGINEERING CHENGANNUR</h1></center>
 <marquee style="color:green">Vision:To emerge as an institution of excellence that imparts knowledge through education, learning, and research for the inclusive development of society.
-mission:To impart engineering education that enables the students to design, develop and maintain systems, products and process for the society utilizing the evolving technology.To orient the students for professional success, critical thinking and equity.To inculcate the students with entrepreneurial skills, ethical and social values</marquee>
+<br>mission:To impart engineering education that enables the students to design, develop and maintain systems, products and process for the society utilizing the evolving technology.To orient the students for professional success, critical thinking and equity.To inculcate the students with entrepreneurial skills, ethical and social values</marquee>
 <h2 style="background-color:red;color:white">ABOUT US:
 The College of Engineering Chengannur (CEC), was established by the Government of Kerala under the aegis of the IHRD, in the year 1993. It has been approved by All India Council for Technical Education (AICTE) and affiliated to APJ Abdul Kalam Technological University (KTU). Ever since its inception, the college has maintained its eminence as a leading engineering college in Kerala. Being located in Chengannur town, Alleppey district the college has got access to all means of transport, communication and lodging facilities.
 </h2>
